WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313352
REGRESSION(
311771@main
): [Tahoe] media/media-vp8-webm-with-preload.html is a flaky TEXT failure
https://bugs.webkit.org/show_bug.cgi?id=313352
Summary
REGRESSION(311771@main): [Tahoe] media/media-vp8-webm-with-preload.html is a ...
Karl Rackler
Reported
2026-04-26 09:09:30 PDT
Description: media/media-vp8-webm-with-preload.html is a flaky TEXT failure on mac Tahoe Release Regression =
https://commits.webkit.org/compare/311770@main...311771@main
This issue can be bisected to
311771@main
using the command: run-webkit-tests --no-build --no-retry --no-show-results --exit-after-n-failures=1 --expect-pass --iterations=25 --force --release media/media-vp8-webm-with-preload.html ------------- BISECTION AUDIT TRAIL -------------
307942@main
, 740db111635d --> Passed
309968@main
, 474e735f74f7 --> Passed
310995@main
, 98b69229321e --> Passed
311519@main
, 1d143b5f5525 --> Passed
311635@main
, 0da44e0e68a6 --> Passed
311744@main
, 02b6ee7e51da --> Passed
311763@main
, 090e9827c2cd --> Passed
311769@main
, a9343d26da81 --> Passed
311770@main
, 865d3b1fb727 --> Passed
311771@main
, 865d3b1fb727 --> TEXT
311772@main
, 865d3b1fb727 --> TEXT
311774@main
, 6871e889d5f1 --> TEXT
311807@main
, 1dc928329e0a --> TEXT
312031@main
, 38b2fc563a6f --> TEXT
312031@main
, eed3952fe7ac --> TEXT
312036@main
, 5e4c4aa30c79 --> TEXT ------------- BISECTION AUDIT TRAIL END ------------- History:
https://results.webkit.org/?version_name=Tahoe&suite=layout-tests&test=media%2Fmedia-vp8-webm-with-preload.html
Diff: --- +++ @@ -1,6 +1,6 @@ EXPECTED (video.readyState <= '1') OK -EXPECTED (video.readyState == '1') OK +EXPECTED (video.readyState == '1'), OBSERVED '4' FAIL RUN(video.play()) EVENT(playing) RUN(video.currentTime = video.duration - 0.02)
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-26 09:10:32 PDT
<
rdar://problem/175625798
>
EWS
Comment 2
2026-04-26 09:23:07 PDT
Test gardening commit
312042@main
(6fde2fd43aca): <
https://commits.webkit.org/312042@main
> Reviewed commits have been landed. Closing PR #63633 and removing active labels.
Jean-Yves Avenard [:jya]
Comment 3
2026-04-26 22:40:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63660
Ryan Haddad
Comment 4
2026-04-28 16:27:27 PDT
Landed
https://commits.webkit.org/312161@main
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug