Source/WebCore/platform/graphics/avfoundation/AudioVideoRendererAVFObjC.mm
@@ -252,8 +252,13 @@ void AudioVideoRendererAVFObjC::enqueueSample(TrackIdentifier trackId, Ref<Media
             return;
         }
         m_keyframeNeeded = false;
-        if (RefPtr videoRenderer = m_videoRenderer; videoRenderer && isEnabledVideoTrackId(trackId))
+        if (RefPtr videoRenderer = m_videoRenderer; videoRenderer && isEnabledVideoTrackId(trackId)) {
             videoRenderer->enqueueSample(sample, minimumUpcomingTime.value_or(sample->presentationTime()));
+            if (!m_hasEverSubmittedVideoSample) {
+                m_hasEverSubmittedVideoSample = true;
+                m_previousRendererConfiguration.isRenderingCompressedVideo = !isUsingDecompressionSession();
+            }
+        }
         break;
 
     case TrackType::Audio:
@@ -1334,7 +1339,7 @@ void AudioVideoRendererAVFObjC::configureHasAvailableVideoFrameCallbackIfNeeded(
     if (videoRenderer)
         videoRenderer->setPreferences(m_preferences);
 
-    if (m_previousRendererConfiguration.hasVideoTrack) {
+    if (hasSelectedVideo()) {
         // Activating AvailableVideoFrame callback may force the use of decompression session.
         updateDisplayLayerIfNeeded();
     }
@@ -1441,10 +1446,9 @@ Ref<GenericPromise> AudioVideoRendererAVFObjC::stageVideoRenderer(WebSampleBuffe
     ASSERT(m_videoRenderer);
 
     RefPtr videoRenderer = m_videoRenderer;
+
     RendererConfiguration newConfiguration {
-        .canUseDecompressionSession = willUseDecompressionSessionIfNeeded(),
-        .isProtected = m_hasProtectedVideoContent,
-        .hasVideoTrack = m_enabledVideoTrackId.has_value()
+        .isRenderingCompressedVideo = !!renderer && !willUseDecompressionSessionIfNeeded() && m_hasEverSubmittedVideoSample
     };
     if (renderer == videoRenderer->renderer()) {
         if (std::exchange(m_previousRendererConfiguration, newConfiguration) != newConfiguration && renderer)
@@ -1471,13 +1475,9 @@ Ref<GenericPromise> AudioVideoRendererAVFObjC::stageVideoRenderer(WebSampleBuffe
         destroyVideoRenderer();
     }
 
-    bool videoTrackChangeOnly = !m_previousRendererConfiguration.hasVideoTrack && newConfiguration.hasVideoTrack;
-    bool configurationChanged = std::exchange(m_previousRendererConfiguration, newConfiguration) != newConfiguration;
-    bool hasVideoRenderer = videoRenderer && videoRenderer->renderer();
-    bool switchingFromRenderless = renderer && !hasVideoRenderer && !isUsingDecompressionSession();
-    bool flushRequired = (configurationChanged || switchingFromRenderless) && !videoTrackChangeOnly;
+    bool flushRequired = std::exchange(m_previousRendererConfiguration, newConfiguration) != newConfiguration && m_hasEverSubmittedVideoSample;
     m_readyToRequestVideoData = !flushRequired;
-    ALWAYS_LOG(LOGIDENTIFIER, "renderer: ", !!renderer, " videoTrackChangeOnly: ", videoTrackChangeOnly, " configurationChanged: ", configurationChanged, " switchingFromRenderless: ", switchingFromRenderless, " flushRequired: ", flushRequired);
+    ALWAYS_LOG(LOGIDENTIFIER, "renderer: ", !!renderer, " flushRequired: ", flushRequired);
 
     return videoRenderer->changeRenderer(renderer)->whenSettled(RunLoop::mainSingleton(), [weakThis = ThreadSafeWeakPtr { *this }, rendererToExpire = WTF::move(rendererToExpire), flushRequired]() {
         RefPtr protectedThis = weakThis.get();
@@ -1868,6 +1868,7 @@ void AudioVideoRendererAVFObjC::flushVideo()
     ALWAYS_LOG(LOGIDENTIFIER);
 
     setHasAvailableVideoFrame(false);
+    m_hasEverSubmittedVideoSample = false;
     // Flush may call immediately requestMediaDataWhenReady. Must clear m_readyToRequestVideoData before flushing renderer.
     m_readyToRequestVideoData = true;
     if (RefPtr videoRenderer = m_videoRenderer)
